# RayTracker

./: .gitignore  CMakeLists.txt
src/: aabb.h  bmp_writer.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  obj_loader.h  quad.h  ray.h  sphere.h  transform.h  triangle.h  utils.h  vec3.h
